--- a/changelog.txt
+++ b/changelog.txt
@@ -3,3 +3,5 @@
 = 1.1.0 =
 - Added option to auto resize on upload
 - Added WBFY_SI_IMAGE_EXTENSIONS constant
+= 1.2.0 =
+- Added option to reformat jpeg as progressive interlaced images
